BE: custom response error, fix error cors SQL; FE/admin: catch error register page, axios